// Copyright 2020 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package testing.scalapb;

message SimpleRequest {
  string payload = 1;
  int32 size = 2;
}

message SimpleResponse {
  string message = 1;
  int32 status = 2;
}

// Copied from https://scalapb.github.io/docs/sealed-oneofs/
message SimpleOneof {
  oneof sealed_value {
    Literal lit = 1;
    Add add = 2;
  }
}

message Literal {
  int32 value = 1;
}

message Add {
  SimpleOneof left = 1;
  SimpleOneof right = 2;
}

enum TestEnum {
  ZERO = 0;
  ONE = 1;
  TWO = 2;
}

message TestMessage {
  message Nested {
    string string = 1;
  }

  bool bool = 1;
  int32 int32 = 2;
  int64 int64 = 3;
  uint32 uint32 = 4;
  uint64 uint64 = 5;
  sint32 sint32 = 6;
  sint64 sint64 = 7;
  fixed32 fixed32 = 8;
  fixed64 fixed64 = 9;
  float float = 10;
  double double = 11;
  string string = 12;
  bytes bytes = 13;
  TestEnum test_enum = 14;
  Nested nested = 15;
  repeated string strings = 16;
  map<string, int32> map = 17;
  TestMessage self = 18;
  SimpleOneof oneof = 19;
}
